--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PopPop</string>
+    <string name="default_web_client_id">750488609187-dta4s9ud1jle0vtumvadopmd04giqd9j.apps.googleusercontent.com</string>
 </resources>
