Layout for edit profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
         <item>Aquarius</item>
         <item>Pisces</item>
     </string-array>
+    <string name="age_range_format">%d - %d</string>
 </resources>
