more edit profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
         <item>Pisces</item>
     </string-array>
     <string name="age_range_format">%d - %d</string>
+    <string name="distance_format">%d km</string>
 </resources>
